--- a/package.json
+++ b/package.json
@@ -4,15 +4,19 @@
   "private": true,
   "dependencies": {
     "@ant-design/icons": "^4.6.2",
+    "@antv/data-set": "0.10.2",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "antd": "3.26.19",
     "axios": "^0.21.1",
     "babel-plugin-import": "^1.13.3",
+    "bizcharts": "3.5.2",
     "customize-cra": "^1.0.0",
     "draft-js": "^0.11.7",
     "draftjs-to-html": "^0.9.1",
+    "echarts": "^5.1.2",
+    "echarts-for-react": "^3.0.1",
     "html-to-draftjs": "^1.5.0",
     "jsonp": "^0.2.1",
     "less": "3.12.2",
